Got MVP up and running

--- a/Best Attacking Matchups - Pokemon GO.ipynb
+++ b/Best Attacking Matchups - Pokemon GO.ipynb
@@ -2023,7 +2023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 131,
    "metadata": {
     "collapsed": false
    },
@@ -2129,7 +2129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 132,
    "metadata": {
     "collapsed": false
    },
@@ -2142,9 +2142,9 @@
     "def get_max_moveset_damage(row, defender, attack_type=\"tank\"):\n",
     "#     print(no_weave_damage(row, defender), weave_damage(row, defender))\n",
     "    if attack_type == \"tank\":\n",
-    "        multiplier = row[\"Atk\"] * row[\"HP\"] * row[\"Def\"] /move_effectivity(pokemon_types[defender][0], row[\"Pokemon\"])\n",
+    "        multiplier = row[\"Atk\"] * row[\"HP\"] * row[\"Def\"] #/move_effectivity(pokemon_types[defender][0], row[\"Pokemon\"])\n",
     "    elif attack_type == \"attack\":\n",
-    "        multiplier = row[\"Atk\"] /move_effectivity(pokemon_types[defender][0], row[\"Pokemon\"])\n",
+    "        multiplier = row[\"Atk\"] #/move_effectivity(pokemon_types[defender][0], row[\"Pokemon\"])\n",
     "    return max(no_weave_damage(row, defender), weave_damage(row, defender)) * multiplier\n",
     "        \n",
     "def get_top_n_attackers(defender, n=20, exclude_legendary=True, attack_type=\"tank\"):\n",
@@ -2169,7 +2169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 138,
    "metadata": {
     "collapsed": false
    },
@@ -2178,61 +2178,197 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dragonite (Dragon Breath, Dragon Claw) - 100.0\n",
-      "Dragonite (Dragon Breath, Dragon Pulse) - 98.7\n",
-      "Dragonite (Dragon Breath, Hyper Beam) - 97.82\n",
-      "Lapras (Frost Breath, Blizzard) - 94.51\n",
-      "Snorlax (Zen Headbutt, Hyper Beam) - 91.32\n",
-      "Lapras (Frost Breath, Ice Beam) - 91.07\n",
-      "Snorlax (Lick, Hyper Beam) - 90.72\n",
-      "Lapras (Ice Shard, Blizzard) - 90.09\n",
-      "Vaporeon (Water Gun, Hydro Pump) - 88.09\n",
-      "Lapras (Ice Shard, Ice Beam) - 85.33\n",
-      "Lapras (Frost Breath, Dragon Pulse) - 83.71\n",
-      "Gyarados (Dragon Breath, Hydro Pump) - 82.83\n",
-      "Gyarados (Bite, Hydro Pump) - 82.83\n",
-      "Snorlax (Zen Headbutt, Body Slam) - 81.69\n",
-      "Snorlax (Lick, Body Slam) - 80.73\n",
-      "Exeggutor (Zen Headbutt, Solar Beam) - 78.93\n",
-      "Vaporeon (Water Gun, Aqua Tail) - 78.47\n",
-      "Lapras (Ice Shard, Dragon Pulse) - 78.32\n",
-      "Dragonite (Steel Wing, Hyper Beam) - 77.85\n",
-      "Snorlax (Zen Headbutt, Earthquake) - 76.6\n",
-      "Dragonite (Steel Wing, Dragon Pulse) - 76.15\n",
-      "Exeggutor (Confusion, Solar Beam) - 74.73\n",
-      "Gyarados (Dragon Breath, Dragon Pulse) - 72.8\n",
-      "Gyarados (Bite, Dragon Pulse) - 72.8\n",
-      "Jolteon (Thunder Shock, Thunder) - 71.99\n",
-      "Exeggutor (Zen Headbutt, Psychic) - 71.62\n",
-      "Venusaur (Vine Whip, Solar Beam) - 71.41\n",
-      "Snorlax (Lick, Earthquake) - 71.24\n",
-      "Jolteon (Thunder Shock, Thunderbolt) - 69.01\n",
-      "Dragonite (Steel Wing, Dragon Claw) - 68.0\n",
-      "Tentacruel (Poison Jab, Blizzard) - 66.43\n",
-      "Venusaur (Razor Leaf, Solar Beam) - 65.44\n",
-      "Venusaur (Vine Whip, Petal Blizzard) - 65.25\n",
-      "Tentacruel (Poison Jab, Hydro Pump) - 64.73\n",
-      "Exeggutor (Zen Headbutt, Seed Bomb) - 64.27\n",
-      "Venusaur (Vine Whip, Sludge Bomb) - 63.95\n",
-      "Exeggutor (Confusion, Psychic) - 63.49\n",
-      "Slowbro (Water Gun, Psychic) - 63.29\n",
-      "Vaporeon (Water Gun, Water Pulse) - 61.89\n",
-      "Cloyster (Frost Breath, Blizzard) - 61.8\n",
-      "Tentacruel (Poison Jab, Sludge Wave) - 60.12\n",
-      "Venusaur (Razor Leaf, Petal Blizzard) - 60.06\n",
-      "Exeggutor (Confusion, Seed Bomb) - 60.04\n",
-      "Tentacruel (Acid, Blizzard) - 59.34\n",
-      "Slowbro (Confusion, Psychic) - 59.22\n",
-      "Cloyster (Ice Shard, Blizzard) - 58.91\n",
-      "Gyarados (Dragon Breath, Twister) - 58.19\n",
-      "Gyarados (Bite, Twister) - 58.19\n",
-      "Tentacruel (Acid, Hydro Pump) - 57.55\n",
-      "Muk (Poison Jab, Gunk Shot) - 57.52\n"
+      "Lapras (Frost Breath, Blizzard) - 100.0\n",
+      "Lapras (Frost Breath, Ice Beam) - 96.36\n",
+      "Lapras (Ice Shard, Blizzard) - 95.33\n",
+      "Lapras (Ice Shard, Ice Beam) - 90.28\n",
+      "Dragonite (Dragon Breath, Dragon Claw) - 84.65\n",
+      "Dragonite (Dragon Breath, Dragon Pulse) - 83.54\n",
+      "Lapras (Frost Breath, Dragon Pulse) - 81.72\n",
+      "Snorlax (Zen Headbutt, Hyper Beam) - 77.3\n",
+      "Snorlax (Lick, Hyper Beam) - 76.79\n",
+      "Lapras (Ice Shard, Dragon Pulse) - 76.35\n",
+      "Dragonite (Dragon Breath, Hyper Beam) - 74.26\n",
+      "Snorlax (Zen Headbutt, Body Slam) - 69.15\n",
+      "Snorlax (Lick, Body Slam) - 68.34\n",
+      "Cloyster (Frost Breath, Blizzard) - 65.38\n",
+      "Snorlax (Zen Headbutt, Earthquake) - 64.84\n",
+      "Dragonite (Steel Wing, Dragon Pulse) - 64.46\n",
+      "Rhydon (Mud Slap, Stone Edge) - 63.97\n",
+      "Gyarados (Dragon Breath, Hydro Pump) - 63.58\n",
+      "Golem (Rock Throw, Stone Edge) - 62.71\n",
+      "Cloyster (Ice Shard, Blizzard) - 62.33\n",
+      "Gyarados (Dragon Breath, Dragon Pulse) - 61.62\n",
+      "Snorlax (Lick, Earthquake) - 60.3\n",
+      "Vaporeon (Water Gun, Hydro Pump) - 59.65\n",
+      "Dragonite (Steel Wing, Hyper Beam) - 59.6\n",
+      "Dragonite (Steel Wing, Dragon Claw) - 57.56\n",
+      "Golem (Mud Shot, Stone Edge) - 57.08\n",
+      "Gyarados (Bite, Dragon Pulse) - 56.32\n",
+      "Gyarados (Bite, Hydro Pump) - 56.09\n",
+      "Tentacruel (Poison Jab, Blizzard) - 54.08\n",
+      "Rhydon (Rock Smash, Stone Edge) - 54.05\n",
+      "Vaporeon (Water Gun, Aqua Tail) - 53.14\n",
+      "Rhydon (Mud Slap, Megahorn) - 52.92\n",
+      "Rhydon (Mud Slap, Earthquake) - 51.85\n",
+      "Golem (Mud Slap, Stone Edge) - 51.5\n",
+      "Cloyster (Frost Breath, Hydro Pump) - 51.39\n",
+      "Dewgong (Frost Breath, Blizzard) - 50.1\n",
+      "Golem (Rock Throw, Earthquake) - 49.8\n",
+      "Tentacruel (Acid, Blizzard) - 49.28\n",
+      "Gyarados (Dragon Breath, Twister) - 49.26\n",
+      "Cloyster (Ice Shard, Hydro Pump) - 48.71\n",
+      "Muk (Poison Jab, Gunk Shot) - 48.69\n",
+      "Exeggutor (Zen Headbutt, Psychic) - 48.5\n",
+      "Rhydon (Rock Smash, Earthquake) - 48.49\n",
+      "Cloyster (Frost Breath, Icy Wind) - 48.26\n",
+      "Dewgong (Ice Shard, Blizzard) - 47.76\n",
+      "Muk (Poison Jab, Sludge Wave) - 47.48\n",
+      "Slowbro (Water Gun, Ice Beam) - 47.38\n",
+      "Omastar (Water Gun, Rock Slide) - 47.1\n",
+      "Omastar (Rock Throw, Rock Slide) - 46.75\n",
+      "Cloyster (Ice Shard, Icy Wind) - 46.54\n"
      ]
     }
    ],
    "source": [
-    "get_top_n_attackers(\"Gyarados\",attack_type=\"attack\",n=50)"
+    "get_top_n_attackers(\"Dragonite\",attack_type=\"tank\",n=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Snorlax (Zen Headbutt, Hyper Beam) - 100.0\n",
+      "Snorlax (Lick, Hyper Beam) - 99.34\n",
+      "Snorlax (Zen Headbutt, Body Slam) - 89.46\n",
+      "Snorlax (Lick, Body Slam) - 88.41\n",
+      "Dragonite (Dragon Breath, Dragon Claw) - 87.61\n",
+      "Dragonite (Dragon Breath, Dragon Pulse) - 86.46\n",
+      "Dragonite (Dragon Breath, Hyper Beam) - 85.7\n",
+      "Snorlax (Zen Headbutt, Earthquake) - 83.88\n",
+      "Lapras (Frost Breath, Blizzard) - 82.8\n",
+      "Rhydon (Mud Slap, Stone Edge) - 82.76\n",
+      "Golem (Rock Throw, Stone Edge) - 81.13\n",
+      "Lapras (Frost Breath, Ice Beam) - 79.78\n",
+      "Lapras (Ice Shard, Blizzard) - 78.93\n",
+      "Jolteon (Thunder Shock, Thunder) - 78.83\n",
+      "Snorlax (Lick, Earthquake) - 78.02\n",
+      "Vaporeon (Water Gun, Hydro Pump) - 77.17\n",
+      "Jolteon (Thunder Shock, Thunderbolt) - 75.57\n",
+      "Lapras (Ice Shard, Ice Beam) - 74.75\n",
+      "Golem (Mud Shot, Stone Edge) - 73.85\n",
+      "Lapras (Frost Breath, Dragon Pulse) - 73.33\n",
+      "Gyarados (Dragon Breath, Hydro Pump) - 72.57\n",
+      "Gyarados (Bite, Hydro Pump) - 72.57\n",
+      "Rhydon (Rock Smash, Stone Edge) - 69.93\n",
+      "Exeggutor (Zen Headbutt, Solar Beam) - 69.15\n",
+      "Vaporeon (Water Gun, Aqua Tail) - 68.74\n",
+      "Lapras (Ice Shard, Dragon Pulse) - 68.61\n",
+      "Rhydon (Mud Slap, Megahorn) - 68.46\n",
+      "Dragonite (Steel Wing, Hyper Beam) - 68.2\n",
+      "Rhydon (Mud Slap, Earthquake) - 67.08\n",
+      "Dragonite (Steel Wing, Dragon Pulse) - 66.72\n",
+      "Golem (Mud Slap, Stone Edge) - 66.62\n",
+      "Exeggutor (Confusion, Solar Beam) - 65.46\n",
+      "Golem (Rock Throw, Earthquake) - 64.42\n",
+      "Gyarados (Dragon Breath, Dragon Pulse) - 63.78\n",
+      "Gyarados (Bite, Dragon Pulse) - 63.78\n",
+      "Muk (Poison Jab, Gunk Shot) - 62.99\n",
+      "Exeggutor (Zen Headbutt, Psychic) - 62.74\n",
+      "Rhydon (Rock Smash, Earthquake) - 62.73\n",
+      "Venusaur (Vine Whip, Solar Beam) - 62.56\n",
+      "Jolteon (Thunder Shock, Discharge) - 62.33\n",
+      "Muk (Poison Jab, Sludge Wave) - 61.43\n",
+      "Omastar (Water Gun, Rock Slide) - 60.93\n",
+      "Omastar (Rock Throw, Rock Slide) - 60.48\n",
+      "Dragonite (Steel Wing, Dragon Claw) - 59.57\n",
+      "Tentacruel (Poison Jab, Blizzard) - 58.19\n",
+      "Electabuzz (Thunder Shock, Thunder) - 57.91\n",
+      "Chansey (Pound, Hyper Beam) - 57.69\n",
+      "Venusaur (Razor Leaf, Solar Beam) - 57.32\n",
+      "Venusaur (Vine Whip, Petal Blizzard) - 57.16\n",
+      "Tentacruel (Poison Jab, Hydro Pump) - 56.71\n"
+     ]
+    }
+   ],
+   "source": [
+    "get_top_n_attackers(\"Gyarados\",attack_type=\"tank\",n=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Snorlax (Zen Headbutt, Hyper Beam) - 100.0\n",
+      "Snorlax (Lick, Hyper Beam) - 99.34\n",
+      "Vaporeon (Water Gun, Hydro Pump) - 96.47\n",
+      "Snorlax (Zen Headbutt, Earthquake) - 90.46\n",
+      "Snorlax (Zen Headbutt, Body Slam) - 89.46\n",
+      "Snorlax (Lick, Body Slam) - 88.41\n",
+      "Dragonite (Dragon Breath, Dragon Claw) - 87.61\n",
+      "Snorlax (Lick, Earthquake) - 86.73\n",
+      "Rhydon (Mud Slap, Stone Edge) - 86.48\n",
+      "Dragonite (Dragon Breath, Dragon Pulse) - 86.46\n",
+      "Vaporeon (Water Gun, Aqua Tail) - 85.93\n",
+      "Dragonite (Dragon Breath, Hyper Beam) - 85.7\n",
+      "Rhydon (Mud Slap, Earthquake) - 83.84\n",
+      "Lapras (Frost Breath, Blizzard) - 82.8\n",
+      "Gyarados (Dragon Breath, Hydro Pump) - 81.02\n",
+      "Gyarados (Bite, Hydro Pump) - 81.02\n",
+      "Lapras (Frost Breath, Ice Beam) - 79.78\n",
+      "Rhydon (Mud Slap, Megahorn) - 79.58\n",
+      "Lapras (Ice Shard, Blizzard) - 78.93\n",
+      "Rhydon (Rock Smash, Earthquake) - 78.41\n",
+      "Dragonite (Steel Wing, Hyper Beam) - 77.11\n",
+      "Lapras (Ice Shard, Ice Beam) - 74.75\n",
+      "Dragonite (Steel Wing, Dragon Pulse) - 74.26\n",
+      "Golem (Mud Shot, Stone Edge) - 73.96\n",
+      "Lapras (Frost Breath, Dragon Pulse) - 73.33\n",
+      "Rhydon (Rock Smash, Stone Edge) - 71.02\n",
+      "Golem (Mud Shot, Earthquake) - 70.83\n",
+      "Golem (Mud Slap, Stone Edge) - 69.62\n",
+      "Exeggutor (Zen Headbutt, Solar Beam) - 69.15\n",
+      "Lapras (Ice Shard, Dragon Pulse) - 68.61\n",
+      "Dragonite (Steel Wing, Dragon Claw) - 68.28\n",
+      "Vaporeon (Water Gun, Water Pulse) - 67.77\n",
+      "Golem (Mud Slap, Earthquake) - 67.5\n",
+      "Omastar (Water Gun, Hydro Pump) - 67.27\n",
+      "Arcanine (Fire Fang, Fire Blast) - 66.95\n",
+      "Exeggutor (Confusion, Solar Beam) - 65.46\n",
+      "Golem (Rock Throw, Stone Edge) - 64.9\n",
+      "Rhydon (Rock Smash, Megahorn) - 64.51\n",
+      "Gyarados (Dragon Breath, Dragon Pulse) - 63.78\n",
+      "Gyarados (Bite, Dragon Pulse) - 63.78\n",
+      "Golem (Rock Throw, Earthquake) - 63.68\n",
+      "Arcanine (Bite, Fire Blast) - 63.01\n",
+      "Muk (Poison Jab, Gunk Shot) - 62.99\n",
+      "Exeggutor (Zen Headbutt, Psychic) - 62.74\n",
+      "Venusaur (Vine Whip, Solar Beam) - 62.56\n",
+      "Tentacruel (Poison Jab, Hydro Pump) - 61.45\n",
+      "Muk (Poison Jab, Sludge Wave) - 61.43\n",
+      "Slowbro (Water Gun, Psychic) - 61.41\n",
+      "Charizard (Wing Attack, Fire Blast) - 59.59\n",
+      "Arcanine (Fire Fang, Flamethrower) - 59.46\n"
+     ]
+    }
+   ],
+   "source": [
+    "get_top_n_attackers(\"Gyarados\",attack_type=\"tank\",n=50)"
    ]
   },
   {
